--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logos/peter-logo.png">
     <style>
-        /* 🌐 Universal Mobile Responsiveness Fix */
+        /*Universal Mobile Responsiveness Fix */
 html, body {
   max-width: 100%;
   overflow-x: hidden !important;
@@ -234,7 +234,7 @@ html, body {
                     <div class="col-lg-6" data-aos="fade-left">
                         <div class="cv-preview-wrapper">
                             <div class="cv-preview">
-                                <img src="images/cv/cv-preview.jpg" alt="CV Preview" class="img-fluid">
+                                <img src="images/cv/cv-preview.png" alt="CV Preview" class="img-fluid">
                                 <div class="cv-overlay">
                                     <a href="documents/eluwade-peter-toluwanimi-CV.pdf" class="btn btn-light" download>
                                         <i class="bi bi-download me-2"></i>Download
@@ -320,7 +320,7 @@ html, body {
                             </div>
                             <h3>Portfolio Showcase</h3>
                             <p>A detailed showcase of my best projects with case studies and results.</p>
-                            <a href="files/Peter_Lightspeed_Portfolio.pdf" class="btn btn-outline-primary" download>
+                            <a href="documents/Portfolio_Showcase.pdf" class="btn btn-outline-primary" download>
                                 <i class="bi bi-download me-2"></i>Download Portfolio
                             </a>
                         </div>
@@ -334,7 +334,7 @@ html, body {
                             </div>
                             <h3>Client References</h3>
                             <p>Letters of recommendation and references from previous clients.</p>
-                            <a href="files/Peter_Lightspeed_References.pdf" class="btn btn-outline-primary" download>
+                            <a href="documents/Client_References.pdf" class="btn btn-outline-primary" download>
                                 <i class="bi bi-download me-2"></i>Download References
                             </a>
                         </div>
@@ -348,7 +348,7 @@ html, body {
                             </div>
                             <h3>Skills Assessment</h3>
                             <p>Detailed breakdown of my technical skills with proficiency levels.</p>
-                            <a href="files/Peter_Lightspeed_Skills.pdf" class="btn btn-outline-primary" download>
+                            <a href="Skills_Assessment" class="btn btn-outline-primary" download>
                                 <i class="bi bi-download me-2"></i>Download Skills Assessment
                             </a>
                         </div>
