--- a/sax.html
+++ b/sax.html
@@ -139,7 +139,7 @@
     <div class="row align-items-center">
       <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?w=600&h=400&fit=crop" 
+          <img src="images/profile/peterphonist_2" 
                alt="Saxophonist Performance" 
                class="img-fluid rounded-4 shadow">
         </div>
@@ -462,7 +462,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="https://images.unsplash.com/photo-1415201364774-f6f0bb35f28f?w=400&h=250&fit=crop" 
+            <img src="images/profile/peterphonist_2" 
                  alt="Smooth Jazz Vibes" 
                  class="img-fluid">
             <div class="play-overlay">
@@ -472,9 +472,9 @@
             </div>
           </div>
           <div class="performance-content">
-            <h5>Smooth Jazz Vibes</h5>
-            <p class="text-muted">Experience the soulful performance live from my latest gig</p>
-            <a href="https://www.youtube.com/@peter_lightspeed" target="_blank" class="btn btn-outline-primary btn-sm">
+            <h5>Live sax cover of Venus by Faceless</h5>
+            <p class="text-muted">Experience the live sax cover of venus at a concert</p>
+            <a href="" target="_blank" class="btn btn-outline-primary btn-sm">
               <i class="bi bi-play-circle me-1"></i>Watch Now
             </a>
           </div>
@@ -485,8 +485,8 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="https://images.unsplash.com/photo-1501612780327-45045538702b?w=400&h=250&fit=crop" 
-                 alt="Soulful Evening" 
+            <img src="images/profile/peterphonist_3" 
+                 alt="Peterphonist" 
                  class="img-fluid">
             <div class="play-overlay">
               <a href="#" class="play-button">
@@ -495,9 +495,9 @@
             </div>
           </div>
           <div class="performance-content">
-            <h5>Soulful Evening</h5>
-            <p class="text-muted">An evening performance full of energy and smooth melodies</p>
-            <a href="https://www.youtube.com/@peter_lightspeed" target="_blank" class="btn btn-outline-primary btn-sm">
+            <h5></h5>
+            <p class="text-muted">Best part in the live sax cover of Venus by Faceless</p>
+            <a href="https://www.youtube.com/shorts/K_8Ar53wkxA" target="_blank" class="btn btn-outline-primary btn-sm">
               <i class="bi bi-play-circle me-1"></i>Watch Now
             </a>
           </div>
@@ -508,7 +508,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=400&h=250&fit=crop" 
+            <img src="images/profile/peterphonist_4" 
                  alt="Jazz Fusion" 
                  class="img-fluid">
             <div class="play-overlay">
@@ -518,9 +518,10 @@
             </div>
           </div>
           <div class="performance-content">
-            <h5>Jazz Fusion</h5>
-            <p class="text-muted">Combining modern jazz with soulful saxophone expressions</p>
-            <a href="https://www.youtube.com/@peter_lightspeed" target="_blank" class="btn btn-outline-primary btn-sm">
+            <h5>Live Sax Birthday suprise, they Started Spraying Her Money 🎷🔥 | #peterphonist</h5>
+            <p class="text-muted">Pure joy, pure praise🎷<br>
+While I was playing, people couldn’t hold back - the atmosphere was filled with celebration, dancing, and gratitude🕺🏾</p>
+            <a href="https://www.youtube.com/shorts/dSBioM4x3Rk" target="_blank" class="btn btn-outline-primary btn-sm">
               <i class="bi bi-play-circle me-1"></i>Watch Now
             </a>
           </div>
