--- a/sax.html
+++ b/sax.html
@@ -139,7 +139,7 @@
     <div class="row align-items-center">
       <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
         <div class="about-image">
-          <img src="images/profile/peterphonist_2" 
+          <img src="images/profile/peterphonist_about_pic.jpeg" 
                alt="Saxophonist Performance" 
                class="img-fluid rounded-4 shadow">
         </div>
