--- a/sax.html
+++ b/sax.html
@@ -462,7 +462,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="images/profile/peterphonist_2" 
+            <img src="images/profile/peterphonist_2.jpg" 
                  alt="Smooth Jazz Vibes" 
                  class="img-fluid">
             <div class="play-overlay">
@@ -485,7 +485,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="images/profile/peterphonist_3" 
+            <img src="images/profile/peterphonist_3.png" 
                  alt="Peterphonist" 
                  class="img-fluid">
             <div class="play-overlay">
@@ -508,8 +508,8 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="images/profile/peterphonist_4" 
-                 alt="Jazz Fusion" 
+            <img src="images/profile/peterphonist_4.png" 
+                 alt="Birrthday Suprise" 
                  class="img-fluid">
             <div class="play-overlay">
               <a href="#" class="play-button">
