--- a/sax.html
+++ b/sax.html
@@ -15,6 +15,8 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="sax.css">
 <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/logos/peter-logo.png">
 </head>
 <body>
 
