--- a/sax.html
+++ b/sax.html
@@ -476,7 +476,7 @@
           <div class="performance-content">
             <h5>Live sax cover of Venus by Faceless</h5>
             <p class="text-muted">Experience the live sax cover of venus at a concert</p>
-            <a href="" target="_blank" class="btn btn-outline-primary btn-sm">
+            <a href="https://www.youtube.com/shorts/1xBQ2UMvtBw" target="_blank" class="btn btn-outline-primary btn-sm">
               <i class="bi bi-play-circle me-1"></i>Watch Now
             </a>
           </div>
@@ -497,8 +497,8 @@
             </div>
           </div>
           <div class="performance-content">
-            <h5></h5>
-            <p class="text-muted">Best part in the live sax cover of Venus by Faceless</p>
+            <h5>Best part in the live sax cover of Venus by Faceless</h5>
+            <p class="text-muted">Everyone mind was blown!</p>
             <a href="https://www.youtube.com/shorts/K_8Ar53wkxA" target="_blank" class="btn btn-outline-primary btn-sm">
               <i class="bi bi-play-circle me-1"></i>Watch Now
             </a>
