--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@ body {
                             <a class="nav-link px-3" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link px-3" href="sax.html">Sax Services</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link px-3" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
