--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     }
     </script>
     <style>
-/* 🌐 Universal Mobile Responsiveness Fix */
+/* Universal Mobile Responsiveness Fix */
 html, body {
   max-width: 100%;
   overflow-x: hidden; /* no !important here */
