--- a/sax.html
+++ b/sax.html
@@ -518,7 +518,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="images/profile/peterphonist_3.png" 
+            <img src="images/profile/peterphonist_2.jpg" 
                  alt="Peterphonist" 
                  class="img-fluid">
             <div class="play-overlay">
@@ -528,7 +528,7 @@
             </div>
           </div>
           <div class="performance-content">
-            <h5>Best part in the live sax cover of Venus by Faceless</h5>
+            <h5></h5>
             <p class="text-muted">Everyone mind was blown!</p>
             <a href="https://www.youtube.com/shorts/K_8Ar53wkxA" target="_blank" class="btn btn-outline-primary btn-sm">
               <i class="bi bi-play-circle me-1"></i>Watch Now
