--- a/sax.html
+++ b/sax.html
@@ -495,7 +495,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
         <div class="performance-card">
           <div class="performance-thumbnail">
-            <img src="images/profile/peterphonist_2.jpg" 
+            <img src="images/profile/peterphonist_5.jpeg" 
                  alt="Smooth Jazz Vibes" 
                  class="img-fluid">
             <div class="play-overlay">
