Update GitHub link in projects.html

--- a/projects.html
+++ b/projects.html
@@ -293,7 +293,7 @@
                                         <i class="bi bi-play-circle me-1"></i> Live Demo
                                     </a>
                     
-                                    <a href="https://peterlight123.github.io/peterlight-ai-cover-letter"
+                                    <a href="http://github.com/Peterlight123/peterlight-ai-cover-letter"
                                        class="btn btn-outline-dark btn-sm" target="_blank">
                                         <i class="bi bi-github me-1"></i> GitHub
                                     </a>
